2003-05-23  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/misc.tcl (load_xref_pipe): Switch xref
	pipe back to blocking mode before closing
	so that stderr messages are not lost due to
	a nasty Tcl bug.

2003-05-15  John Lash  <jlash@speakeasy.net>

	* gui/tmeter.tcl (sn_loading_message):
	Remove raise call from gui/tmeter.tcl. This eliminates
	a repeated two second pause during the initial
	loading screen. The problem has been seen using both
	gnome and kde desktops and is a bug in the respective
	window managers.

2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/tmeter.tcl (make_scale_window): Add
	a call to sn_wait so that we sit in the
	event loop for a little bit after the scale
	window is mapped. This is needed to work around
	a problem under win32 where the scale window
	is mapped but the contents are not drawn for
	a couple of seconds.

2003-05-02  Mo DeJong  <mdejong@users.sourceforge.net>

	* configure:
	* configure.in: Update version number from 5.1.2
	to 5.1.4.

2002-04-09  Mo DeJong  <mdejong@users.sourceforge.net>

	Added SN-513-2003-04-09 tag for 5.1.3 release.

2003-04-08  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/projmng.tcl (sn_new_project_cb): Don't delete
	a project file that was created in batch mode. The
	sn_create_new_project proc returns zero on a
	normal exit when in batch mode, so we were deleting
	the project file just after it had been created.
	[Bug 656067]

2003-04-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* patches/tk_altkey.patch: Add fix for keyboard
	shortcut bug in the Windows port of Tk.

2003-04-02  Steven Johnson  <sjohnson@neurizon.net>

	* gui/tree.tcl (sort_refresh): Added this new method,
	to allow the sort order of a list to be reset,
	after changes may have been made to the list contents.
	* gui/retrieverpane.tcl (start_search): Called new
	sort_refresh method after symbol tree is regenerated
	(following a file save). This restores the sort
	order that was selected prior to the save.
